fixed minor alignment issues

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ ul li{
 
 ul li a:hover{
     color: #f05d5e;
-    padding-left: 27px;
+    padding-left: 57px;
     border-left: 3px solid #f05d5e;
 }
 
@@ -157,7 +157,20 @@ ul li a{
     font-size: 18px;
     transition: color 0.3s;
     padding-left: 60px;
+    display: flex;
+    align-items: center;
 }
+
+h1 span{
+    position: relative;
+    top: 0px;
+}
+
+a span{
+    position: relative;
+    top: 0px;
+}
+
 
 .sidebar i{
     margin-right: 25px;
@@ -289,6 +302,12 @@ main{
     ul li a{
         padding-left: 30px;
     }
+
+    ul li a:hover{
+    color: #f05d5e;
+    padding-left: 27px;
+    border-left: 3px solid #f05d5e;
+}
 }
 
 @media (max-width: 1100px){
@@ -331,6 +350,7 @@ main{
         flex-direction: column;
         align-items: center;
     }
+
 
     h1 span{
         display: none;
